...
    <string name="welcome">Welcome!</string>

    <string name="login_failed_bad_u_p">Could not log you in. \nPlease check your credentials and try again.</string>
    <string name="login_failed_network">Could not log you in. \nPlease check your network availability.</string>
    <string name="login_forgot_password">Forgot password?</string>
    <string name="create_user_failed_user_exists">A user with the same email address already exists.</string>
    <string name="create_user_failed_no_password">Please enter a password (5+ letters or symbols).</string>
    <string name="create_user_failed_no_user_name">Please enter your name.</string>
    <string name="create_user_failed_no_email">Please enter a valid email address.</string>
    <string name="create_user_failed_no_internet">You need an active internet connection to create an account.\n You can access the app in offline mode after that.</string>

    <string name="login_text">Login</string>
    <string name="create_account_text">Create account</string>
...
    <string name="action_search">Search</string>
    <string name="action_filter">Filter</string>
    <string name="action_add_user">Add User</string>
    <string name="action_auto_add_hours">Auto Add Hours</string>
    <string name="action_sort">Sort</string>

    <string name="action_add_project">Add a project</string>
    <string name="action_add_issue">Add an issue</string>
    <string name="action_add_time_entry">Add a time entry</string>

    <string name="action_undo">Undo</string>
    <string name="action_ok">OK</string>
    <string name="action_save">Save</string>
    <string name="action_dismiss">Dismiss</string>

...
    <string name="action_no">No</string>

    <string name="btn_cancel">Cancel</string>


    <!--context_menu-->
    <string name="menu_title_upload_icon">Upload an image</string>
    <string name="menu_title_browse_existing">Select from existing</string>


    <!--project form-->
    <string name="project_form_header_add">Adding a project</string>
    <string name="project_form_header_edit">Editing a project</string>
...
    <string name="success_project_save">The %s project has been saved.</string>

    <string name="question_delete_project">Delete project \'%s\'?</string>
    <string name="details_question_delete_project">This will also delete all the related issues and time entries.
    </string>

    <string name="btn_edit_users">Edit users</string>

    <string name="title_edit_users">Select team members</string>

    <string name="helper_users_selection">* Cards marked with a star indicate team members.</string>

    <!--issue form-->
...
