...
            android:id="@+id/guideline_vertical_middle"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5"
    />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/sign_up_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            android:paddingStart="0dp"
...
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp"
            android:backgroundTint="@color/pureWhite"
            android:background="@color/pureWhite"
            android:text="@string/sign_up"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="@+id/create_account_btn"
            app:layout_constraintEnd_toEndOf="@id/create_account_btn"
            app:layout_constraintTop_toTopOf="@id/create_account_btn"
            app:layout_constraintBottom_toBottomOf="@id/create_account_btn"
    />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
...
            app:civ_border_overlay="true"
            app:civ_circle_background_color="@color/indigo_100_blacked"
            tools:src="@tools:sample/avatars"
    />

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/user_image_hint_text"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:background="@drawable/circle_semitransparent_background"
            android:gravity="center"
            android:text="@string/hint_add_image"
            android:alpha="1"
...
            app:layout_constraintStart_toStartOf="@id/user_image"
            app:layout_constraintEnd_toEndOf="@id/user_image"
            tools:alpha="1"
    />

    <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/user_name_edit_text"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/sign_in_user_name_top_margin"
            android:drawableLeft="@drawable/icon_path_user_outline"
            android:drawableStart="@drawable/icon_path_user_outline"
            android:drawablePadding="8dp"
...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/user_image"
            tools:text="Johanna Glied"
    />

    <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/user_email_edit_text"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:drawableLeft="@drawable/icon_path_mail"
            android:drawableStart="@drawable/icon_path_mail"
            android:drawablePadding="8dp"
...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/user_name_edit_text"
            tools:text="johanna.glied@49er.org"
    />

    <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/user_password_edit_text"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:inputType="textPassword"
            android:drawableLeft="@drawable/icon_path_lock"
            android:drawableStart="@drawable/icon_path_lock"
...
