...
                app:hintEnabled="true"
                app:hintAnimationEnabled="true"
                app:errorEnabled="true"
                style="@style/Custom.Widget.MaterialComponents.TextInputLayout.OutlinedBox.Layout"
        >
            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/project_name_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:hint="@string/hint_issue_project_name"
                    style="@style/Custom.Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:singleLine="true"/>
...
                app:errorEnabled="true"
                style="@style/Custom.Widget.MaterialComponents.TextInputLayout.OutlinedBox.Layout"
        >
            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/issue_name_edit_text"
                    android:enabled="false"
                    android:hint="@string/hint_time_entry_issue_name"
                    style="@style/Custom.Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            />
        </com.google.android.material.textfield.TextInputLayout>

...
                app:errorEnabled="true"
                style="@style/Custom.Widget.MaterialComponents.TextInputLayout.OutlinedBox.Layout"
        >
            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/owner_edit_text"
                    android:enabled="false"
                    android:hint="@string/hint_time_entry_owner"
                    style="@style/Custom.Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            />
        </com.google.android.material.textfield.TextInputLayout>

...
                app:errorEnabled="true"
                style="@style/Custom.Widget.MaterialComponents.TextInputLayout.OutlinedBox.Layout"
        >
            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/hours_edit_text"
                    android:hint="@string/hint_time_entry_hours"
                    android:inputType="number"
                    style="@style/Custom.Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            />
        </com.google.android.material.textfield.TextInputLayout>

...
                app:errorEnabled="true"
                style="@style/Custom.Widget.MaterialComponents.TextInputLayout.OutlinedBox.Layout"
        >
            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/comments_edit_text"
                    android:inputType="textMultiLine"
                    android:hint="@string/hint_time_entry_comments"
                    style="@style/Custom.Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            />
        </com.google.android.material.textfield.TextInputLayout>

...
                app:layout_constraintTop_toBottomOf="@id/helper_text"
                app:layout_constraintEnd_toEndOf="parent"
                style="@style/Widget.MaterialComponents.Button.TextButton"
        />

        <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_add"
                android:layout_marginRight="@dimen/sv_margin"
                android:layout_marginEnd="@dimen/sv_margin"
                android:layout_marginTop="32dp"
...
