...
                app:hintEnabled="true"
                app:hintAnimationEnabled="true"
                app:errorEnabled="true"
                style="@style/Custom.Widget.MaterialComponents.TextInputLayout.OutlinedBox.Layout"
        >
            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/project_name_input_layout_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_project_name"
                    style="@style/Custom.Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            />
        </com.google.android.material.textfield.TextInputLayout>
...
                app:hintAnimationEnabled="true"
                app:errorEnabled="true"
                style="@style/Custom.Widget.MaterialComponents.TextInputLayout.OutlinedBox.Layout"

        >
            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/project_description_input_layout_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_project_description"
                    style="@style/Custom.Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            />
        </com.google.android.material.textfield.TextInputLayout>
...
                app:hintAnimationEnabled="true"
                app:errorEnabled="true"
                style="@style/Custom.Widget.MaterialComponents.TextInputLayout.OutlinedBox.Layout"

        >
            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/project_icon_input_layout_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingRight="64dp"
                    android:paddingEnd="64dp"
                    android:hint="@string/hint_project_icon"
                    style="@style/Custom.Widget.MaterialComponents.TextInputLayout.OutlinedBox"
...
                    android:layout_marginRight="8dp"
                    android:background="?attr/selectableItemBackground"
            />

            <fragment
                    android:name="org.rares.miner49er.domain.users.userlist.UserListFragmentPureRv"
                    android:id="@+id/users_rv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:minHeight="200dp"
                    android:layout_margin="@dimen/sv_margin"
                    app:layout_constraintTop_toBottomOf="@+id/project_team_text"
                    app:layout_constraintBottom_toBottomOf="parent"
...
                app:layout_constraintTop_toBottomOf="@id/project_edit_helper_text"
                app:layout_constraintEnd_toEndOf="parent"
                style="@style/Widget.MaterialComponents.Button.TextButton"
        />

        <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_add_project"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_add"
                android:layout_marginRight="@dimen/sv_margin"
                android:layout_marginEnd="@dimen/sv_margin"
                android:layout_marginTop="32dp"
...
